k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi-app-container 
        image: minitiacr.azurecr.io/fastapi:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "256Mi" 
            cpu: "100m"     
          limits:
            memory: "512Mi" 
            cpu: "500m"
