k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-service
spec:
  type: ClusterIP
  selector:
    app: fastapi-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
