k8s/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-spring-to-fastapi
spec:
  podSelector:
    matchLabels:
      app: fastapi-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: minti-backend-app
    ports:
    - protocol: TCP
      port: 8000
